--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.3.0",
+    "redux-persist": "^6.0.0",
     "shadcn-ui": "^0.8.0",
     "tailwind-merge": "^2.5.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.35",
